--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "react-native-elements": "^1.2.7",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-qrcode-generator": "^1.2.1",
+    "react-native-qrcode-svg": "^6.0.3",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
-    "react-native-web": "~0.11.7"
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^9.2.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
