--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@react-native-community/masked-view": "^0.1.9",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-barcode-scanner": "~8.1.0",
+    "expo-constants": "^9.0.0",
+    "expo-image-picker": "^8.1.0",
+    "expo-permissions": "^8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -21,10 +25,10 @@
     "react-native-elements": "^1.2.7",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-image-picker": "^2.3.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
