--- a/app.json
+++ b/app.json
@@ -24,6 +24,10 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": ""
+    "description": "",
+    "android": {
+      "package": "com.cognizantuser.covidhunter",
+      "versionCode": 1
+    }
   }
 }
