--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "expo publish"
   },
   "dependencies": {
+    "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
